modify connection string, Update-Database, build and run

--- a/4.6.0/aspnet-core/src/AbpTestGround.Web.Mvc/appsettings.json
+++ b/4.6.0/aspnet-core/src/AbpTestGround.Web.Mvc/appsettings.json
@@ -1,6 +1,6 @@
 ﻿{
   "ConnectionStrings": {
-    "Default": "Server=localhost; Database=AbpTestGroundDb; Trusted_Connection=True;"
+    "Default": "Server= .\\SQLDEV17; Database=AbpTestGroundDb; Trusted_Connection=True;"
   },
   "Authentication": {
     "JwtBearer": {
